<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <GVL Name="Global" Id="{118a3a19-d9ae-43fa-9370-0480fd6e4d03}">
    <Declaration><![CDATA[VAR_GLOBAL
	g_a_pCtrlInst: ARRAY[0..E_CtrlId.E_CtrlIdMax] OF POINTER TO fb_CtrlBase; // instance array of all controller instances
	g_a_pCtrlCIf: ARRAY[0..E_CtrlId.E_CtrlIdMax] OF POINTER TO T_Ctrl_CIf; // common interface array of all controllers (main use for PLC)
	g_p_fbAlm_Man: POINTER TO FB_Alm_Man; // common access variabel for UI

END_VAR
]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>